styles/footer.css
footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: #000000;
  padding: 60px;
}

a{
    color: #fff;
    transition: color 0.8s ease;
}
a:hover {
    color: #fff;
    text-decoration: underline;
}

.footer-section-name {
  color: #fff;
  margin-bottom: 15px;
  font-weight: bold;
  font-size: 16px;
}

.company-links,
.social-links {
  color: #fff;
  text-decoration: none;
  font-size: 12px;
}


.contact,.email,
.copyright {
  color: #fff;
}

.contact{
    margin-top: 15px;
}

.contact-us{
    font-size: 14px;
    margin-bottom: 5px;
}

.email{
    font-size: 12px;
}

.copyright-section {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  height: 250px;
}

.logo{
    margin-bottom: 10px;
}

.copyright{
    font-size: 16px;
}

